--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,5 +1,15 @@
 /* Importing Google Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@500&family=Lato&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@500&family=Lato&display=swap');
+
+/* Setting CSS Variables */
+
+:root {
+  --lightTeal: #e3f4f3;
+  --neon: #cfff31;
+  --darkerNeon: #add330;
+  --blue: #6056f9;
+  --black: #2c2c2c;
+}
 
 /* Normalize CSS */
 
@@ -27,16 +37,64 @@ p {
   padding: 0;
 }
 
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+h1 {
+  padding: 2rem;
+  font-family: 'Josefin Slab', sans-serif;
+  font-size: 5rem;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  margin: 0;
+  font-family: 'Lato', sans-serif;
+  color: var(--black);
+  background: var(--lightTeal);
+}
+
+main p {
+  margin-bottom: 5rem;
+}
+
+button {
+  display: inline-block;
+  border: none;
+  padding: 1rem 2rem;
+  margin: 2rem 0.5rem;
+  text-decoration: none;
+  color: var(--black);
+  font-family: sans-serif;
+  font-size: 1rem;
+  cursor: pointer;
+  text-align: center;
+  transition: all 200ms ease, 
+}
+
+button:hover,
+button:focus {
+  background: var(--neon);
+}
+
+button:focus {
+  outline: 2px solid #fff;
+  outline-offset: -2px;
+}
+
+button:active {
+  outline: none;
+  background: var(--darkerNeon);
+}
+
+footer {
+  position:absolute;
+  color: #fff;
+  bottom:0;
+  width:100%;
+  height: 7%;   
+  background: var(--blue);
+}
+
+footer p {
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
 }
