--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -272,10 +272,6 @@ a:focus {
   text-decoration: underline;
 }
 
-main p {
-  margin-bottom: 5rem;
-}
-
 button {
   display: inline-block;
   border: none;
@@ -372,6 +368,10 @@ h1 span {
   width: 100%;
   height: 7%;
   z-index: 0;
+}
+
+.answerContainer {
+  padding: 4.5%;
 }
 
 .answer {
