--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -225,6 +225,8 @@ p {
   padding: 0;
 }
 
+/* Main Game */
+
 h1 {
   padding: 2rem;
   font-family: "Josefin Slab", sans-serif;
@@ -242,6 +244,10 @@ h1 span {
   border-radius: 25px;
   line-height: 3.5rem;
   height: 2.5rem;
+}
+
+h3 {
+  margin-top: 1rem; 
 }
 
 body {
