--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -284,11 +284,10 @@ button:active {
 }
 
 footer {
-  position: absolute;
-  color: #fff;
-  bottom: 0;
   width: 100%;
   height: 7%;
+  margin-top: auto;
+  color: #fff;
   /* background: var(--blue); */
 }
 
