--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -484,9 +484,12 @@ form button {
 /* Leaderboard Styling */
 
 .userScoreList {
-  margin: 0 10rem;
+  margin: 2rem 10rem;
   border: 2px solid var(--darkerNeon);
   border-radius: 1rem;
+  overflow-x: hidden;
+  overflow-y: auto;
+  max-height: 31rem;
 }
 
 .ulHeadings,
