--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -236,6 +236,8 @@ body {
 .App {
   /* min-height: 100vh; */
   text-align: center;
+  display: flex;
+  flex-direction: column;
 }
 
 .wrapper {
@@ -290,6 +292,7 @@ footer {
   width: 100%;
   height: 7%;
   /* background: var(--blue); */
+
 }
 
 footer p {
@@ -323,7 +326,7 @@ h2.serverDownHeader {
 header {
   background: white;
   width: 100%;
-  padding: 20px 0;
+  padding-bottom: 20px;
   position: relative;
 }
 
@@ -391,7 +394,6 @@ h1 span {
 
 
 /* Endgame animation -- inspired by Michael, @baumicon on Codepen */
-
 h3 {
   font-size: 3rem;
   margin-top: 1rem;
@@ -419,11 +421,13 @@ h3 {
     background: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/107366/img_fireworks-frames-white.png') no-repeat top left;
     opacity: 0;
   }
+
   .animation {
     opacity: 1;
     animation: pop 1s steps(22, end) 0s 5;
     animation-iteration-count: infinite;
   }
+
 @keyframes pop {
   0% {
         opacity: 1;
@@ -449,7 +453,6 @@ form {
   padding: 1rem;
   position: relative;
 }
-
 
 form input[type=text] {
   background: none;
