--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -234,7 +234,9 @@ body {
 }
 
 .App {
-  /* min-height: 100vh; */
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
   text-align: center;
 }
 
