--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -371,10 +371,11 @@ h1 span {
 /* Homescreen */
 .welcome {
   margin: 15px;
+  
 }
 
-.playButton {
-  margin-top: 30px;
+.play {
+  margin: 30px 0;
 }
 
 /* Progress Bar */
