--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -286,11 +286,10 @@ button:active {
 }
 
 footer {
+  display: grid;
   width: 100%;
-  height: 7%;
   margin-top: auto;
   color: #fff;
-  /* background: var(--blue); */
 }
 
 footer p {
@@ -298,6 +297,7 @@ footer p {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  line-height: 2rem;
   z-index: 1;
 }
 
@@ -361,13 +361,14 @@ h1 span {
 
 /* Progress Bar */
 
+footer p,
 .rc-progress-line {
-  position: absolute;
-  color: #fff;
-  left: 0;
-  bottom: 0;
+  grid-column: 1;
+  grid-row: 1;
+}
+
+.rc-progress-line {
   width: 100%;
-  height: 7%;
   z-index: 0;
 }
 
